<resources>
    <string name="app_name">Voter 360°</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Notification Settings</string>


    <string name="title_shop">CURRENT DATA</string>
    <string name="title_gifts">FAVOURITE DATA</string>
    <string name="title_cart">ALL</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="action_logout">Logout</string>
    <string name="msg_enter_mobile">Enter your mobile number to get started!</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_next">NEXT</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="title_activity_base_actvity">@string/app_name</string>

    <string name="error_invalid_voter_id">Enter a valid voter id</string>
    <string name="error_invalid_mobile_number">Enter 10 digit mobile number</string>

    <string name="db_option1">ID CARD</string>
    <string name="db_option2">BECOME VOLUNTEER</string>
    <string name="db_option3">CHATS</string>
    <string name="db_option4">VIDEO\n CALLING</string>
    <string name="db_option5">VOLUNTEER\n LOGIN</string>
    <string name="db_option6">ADMIN</string>

    <string name="vol_db_option1">ADD\nVOTERS</string>
    <string name="vol_db_option2">INFLUENCE\nPERSON</string>
    <string name="vol_db_option3">LOCAL\nISSUES</string>
    <string name="vol_db_option4">READ NEWS</string>
    <string name="vol_db_option5">APPROVE\nNEWS</string>
    <string name="vol_db_option6"></string>


    <string name="admin_db_option1">BOOTH\nCOMMITTEE</string>
    <string name="admin_db_option2">VOTERS</string>
    <string name="admin_db_option3">INFLUENCE\nPERSON</string>
    <string name="admin_db_option4">LOCAL\nISSUES</string>
    <string name="admin_db_option5">WORK\nDONE</string>
    <string name="admin_db_option6">SURVEY</string>
    <string name="admin_db_option7">MANAGE\nVOLUNTEER</string>
    <string name="admin_db_option8">MEETINGS</string>
    <string name="admin_db_option9">VISITS</string>
    <string name="admin_db_option10">ANALYSIS</string>


    <string name="takephoto">TAKE PICTURE</string>
    <string name="choosefromlib">PICK FROM GALLERY</string>
    <string name="cancel">CANCEL</string>
    <string name="permission">PICK FROM GALLERY</string>
    <string name="externalstorage">CANCEL</string>
    <string name="marque_text">This is a very long text to test the marquee text</string>
    <string name="select_state">Select state</string>
    <string name="select_parlimaent_cons">Select parliment constituency</string>
    <string name="select_assembly_cons">Select assesmbly constituency</string>
    <string name="auth_phone_loading">Authenticating phone number...</string>
    <string name="ok">OK</string>
    <string name="error_invalid_user_name">Enter user name</string>


    <string-array name="catageories">
        <item>OC</item>
        <item>BC</item>
        <item>Minority</item>
        <item>SC</item>
        <item>ST</item>

    </string-array>
    <string name="title_activity_admin_map">VOTER MAP</string>
    <string name="title_volunteer_list">VOLUNTEERS</string>


    <string name="view_profile">View profile</string>
    <string name="track_on_map">Call</string>
    <string name="approve">Approve</string>


    <string name="capture_attendence">Capture Attendence</string>
    <string name="directions">Venue on map</string>
    <string name="delete">Delete</string>

    <string name="give_attendence">Give Attendence</string>


    <string name="address">Address</string>
    <string name="call">Make a call</string>
    <string name="details">Added Details</string>


    <string name="Approve">Approve</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>


    <string name="visit_list">VISIT\'S LIST</string>
    <string name="add_visit">ADD A VISIT</string>
    <string name="work_list">WORK DONE LIST</string>
    <string name="add_work">ADD WORK DONE</string>


    <string name="create_survey">Create Survey</string>


    <string name="surveyList">Survey List</string>


    <string name="end_survey">End Survey</string>


    <string-array name="parties">
        <item>Congress</item>
        <item>BJP</item>
        <item>TDP</item>
        <item>TRS</item>
    </string-array>
    <string name="title_activity_admin_base">AdminBaseActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_volunteer_base">VolunteerBaseActivity</string>


    <string-array name="committes">
        <item>Booth Committee</item>
        <item>Block Committee</item>
        <item>Mandal/Taluk Committee</item>
        <item>District Committee</item>
        <item>State/Pradesh Committee</item>
        <item>NRI Committee</item>

    </string-array>

    <string-array name="positions">
        <item>Member</item>
        <item>Secretary</item>
        <item>Joint Secretary</item>
        <item>General Secretary</item>
        <item>Vice President</item>
        <item>President</item>
        <item>Treasurer</item>
    </string-array>


    <string name="youtubekey">AIzaSyBqzKBbPcD9QzaV61wX-i2CYK_kLXgHbxM</string>

    <string name="title_logo">NATIONAL GEOGRAPHIC</string>
    <string name="btn_skip_intro">Skip Intro</string>


    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>



    <string-array name="languages">
        <item>English</item>
        <item>हिंदी</item>
        <item>తెలుగు</item>
    </string-array>


</resources>
