<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_2"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:layout_marginBottom="@dimen/dp_2"
            android:id="@+id/admin_db_opt1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/admin_db_option1"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/dp_15"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:layout_marginBottom="@dimen/dp_2"
            android:id="@+id/admin_db_opt3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/admin_db_option3"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/dp_15"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:layout_marginBottom="@dimen/dp_2"
            android:id="@+id/admin_db_opt5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/admin_db_option5"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/dp_15"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:layout_marginBottom="@dimen/dp_2"
            android:id="@+id/admin_db_opt7">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/admin_db_option7"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/dp_15"
                android:id="@+id/tv"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:layout_marginBottom="@dimen/dp_2"
            android:id="@+id/admin_db_opt9">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/admin_db_option9"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/dp_15"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:layout_marginRight="@dimen/dp_2"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:layout_marginBottom="@dimen/dp_2"
            android:id="@+id/admin_db_opt2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/admin_db_option2"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/dp_15"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:layout_marginBottom="@dimen/dp_2"
            android:id="@+id/admin_db_opt4">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/admin_db_option4"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/dp_15"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:layout_marginBottom="@dimen/dp_2"
            android:id="@+id/admin_db_opt6">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/admin_db_option6"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/dp_15"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:layout_marginBottom="@dimen/dp_2"
            android:id="@+id/admin_db_opt8">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/admin_db_option8"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/dp_15"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:layout_marginBottom="@dimen/dp_1"
            android:id="@+id/admin_db_opt10">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/admin_db_option10"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/dp_15"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>