<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/button"
                android:layout_margin="1dp"
                android:id="@+id/vol_db_op1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/vol_db_option1"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="@dimen/dp_20"
                android:gravity="center"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/button"
                android:layout_margin="1dp"
                android:id="@+id/vol_db_op2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/vol_db_option2"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="@dimen/dp_20"
                android:gravity="center"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/button"
                android:layout_margin="1dp"
                android:id="@+id/vol_db_op3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/vol_db_option3"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="@dimen/dp_20"
                android:gravity="center"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/button"
                android:layout_margin="1dp"
                android:id="@+id/db_op4"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/vol_db_option4"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="@dimen/dp_20"
                android:gravity="center"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/button"
                android:layout_margin="1dp"
                android:id="@+id/db_op5"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/vol_db_option5"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="@dimen/dp_20"
                android:gravity="center"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/button"
                android:layout_margin="1dp"
                android:id="@+id/db_op6"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/vol_db_option6"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="@dimen/dp_20"
                android:gravity="center"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/marque_text"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="@dimen/dp_20"
            android:gravity="left|center"
            android:singleLine="true"
            android:paddingLeft="@dimen/dp_5"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:id="@+id/marquee_text"
            />
    </LinearLayout>
</LinearLayout>
